Can't scale images correctly on mobile.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,203 +1,161 @@
-/*font-load*/
-@import url('https://fonts.googleapis.com/css?family=PT+Sans');
-
+/*fonts*/
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text:400,600,700');
+/* latin */
 @font-face {
-  font-family: 'PT';
+  font-family: 'Crimson Text';
   font-style: normal;
   font-weight: 400;
-  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v8/ATKpv8nLYAKUYexo8iqqrg.woff2) format('woff2');
+  src: local('Crimson Text Regular'), local('CrimsonText-Regular'), url(https://fonts.gstatic.com/s/crimsontext/v7/3IFMwfRa07i-auYR-B-zNegdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+/* latin */
+@font-face {
+  font-family: 'Crimson Text';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Crimson Text SemiBold'), local('CrimsonText-SemiBold'), url(https://fonts.gstatic.com/s/crimsontext/v7/rEy5tGc5HdXy56Xvd4f3I_Bf3Xtc57ojmY2ox2Xv8Go.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+/* latin */
+@font-face {
+  font-family: 'Crimson Text';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Crimson Text Bold'), local('CrimsonText-Bold'), url(https://fonts.gstatic.com/s/crimsontext/v7/rEy5tGc5HdXy56Xvd4f3I3NuWYKPzoeKl5tYj8yhly0.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
+/*Universal Stylings*/
 html {
-  background-color: #f1f1f2;
+  color: #6E8894;
+  background-color: #F1F7ED;
   box-sizing: border-box;
-  color: #252267;
-  font-family: 'PT';
+  color: black;
   font-size: 16px;
+  font-family: 'Crimson Text'
 }
 
-header {
-  background-color: white;
-  height: 2rem;
-  padding: 1rem 1.5rem;
+/*Global style classes*/
+
+h1, h2, h3{
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 1.5rem;
 }
 
 .bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.logo {
-  font-size: 1.2rem;
-  font-weight: bold;
-  height: 2rem;
-  text-transform: uppercase;
-}
-
-.logo span {
-  color: lightgray;
-  font-weight: 500;
+  margin: 1rem 1.5rem;
 }
 
 a {
-  color: black;
-  padding: 0 1rem;
+  font-size: 1.3rem;
+  margin: 1rem;
   text-decoration: none;
-}
-
-section {
-  display: flex;
-}
-
-.large-graphic {
-  margin: 2rem 1.5rem;
-  max-width: 100%;
-}
-
-.large-graphic img {
-  width: 100%;
-}
-
-.large-graphic video {
-  width: 100%;
-}
-
-.action-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  font-size: 3rem;
-  max-width: 40%;
-}
-
-.action-box h1 {
-  font-weight: bold;
-  line-height: 1.5;
-  padding-bottom: 1rem;
-}
-
-.action-box p {
-  font-size: 1.5rem;
-  padding-bottom: 1rem;
-}
-
-.action-box button {
-  color: white;
-  background-color: darkgray;
-  border-radius: .5rem;
-  padding: .5rem 0;
-  width: 100%;
-}
-
-.information {
-  background-color: white;
 }
 
 .large-column {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  max-width: 60%;
+  margin-right: 1.5rem;
+  width: 60%;
 }
 
-
-
-aside {
+.small-column {
   display: flex;
   flex-direction: column;
-  padding-top: 1rem;
-  max-width: 40%;
+  width: 40%
+}
+
+.large-graphic {
+  display: flex;
+  width: 100%;
 }
 
 .small-graphic {
   padding: 1rem;
-  max-height: auto;
-  max-width: 35%;
+  width: 35%
 }
 
-.small-graphic img {
+.large-graphic :first-child,
+.small-graphic :first-child {
+  width: 100%;
+  height: 60%;
+}
+
+.info-box {
+  border: .2rem solid #54494B;
+  margin: 0;
   max-width: 100%;
 }
 
-figcaption {
-  font-size: 1.2rem;
-  width: 65%;
+.mobile {
+  display: none;
 }
 
-.description {
-  padding: 1.5rem;
-}
+/* specific stylings */
 
-.description h1 {
-  font-size: 2rem;
-  font-weight: bold;
-  padding-bottom: 2rem;
-}
-
-.description p {
-  font-size: 1.5rem;
-  padding-bottom: 2rem;
-}
-
-h2 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  padding: .5rem 0;
-}
-
-.info-box p {
-  padding-bottom: .5rem;
-}
-
-.info-box a {
-  color: blue;
+.logo {
+  text-transform: uppercase;
+  margin: 0;
   padding: 0;
 }
 
-.catalogue {
-  background-color: darkgray;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2rem 4.5rem;
+section .large-column:first-child{
+  align-self: flex-start;
 }
 
-.catalogue .bar {
-  justify-content: flex-start;
+.info-box a {
+  margin-left: 0;
 }
 
-.course {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-self: stretch;
-  max-height: 100%;
-  max-width: 30%;
-  margin: 1rem 1rem;
+figcaption {
+  width: 65%;
 }
 
-.course img {
-  height: auto;
-  width: 100%;
-}
+/*media quries*/
 
-.course figcaption {
-  margin: 1rem 0 1.5rem 1rem;
-}
+@media only screen and (max-width: 800px) {
+  .desktop {
+    display: none;
+  }
 
-.flex-box {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-}
+  .mobile {
+    display:flex;
+  }
 
-footer {
-  margin: 1rem 1.5rem;
-  height: 3rem;
+  section {
+    margin: 0;
+  }
+
+  .banner {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .banner :first-child {
+    width: 100%;
+  }
+
+  .small-column {
+    width: 100%;
+  }
+
+  .info-box {
+    border: none;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .small-graphic {
+    width: 100%;
+  }
+
+  .small-graphic :first-child {
+    height: 35%;
+  }
 }
